--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "electron-quick-start",
+  "name": "scraper",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Scraper",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "npm run build:css && electron .",
+    "build:css": "postcss tailwind.css -o index.css",
+    "dist": "NODE_ENV=production npm run build:css && electron-builder",
+    "pack": "NODE_ENV=production npm run build:css && electron-builder --dir",
+    "postinstall": "electron-builder install-app-deps"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -17,6 +21,26 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "^10.1.3"
+    "autoprefixer": "9.8.6",
+    "electron": "^10.1.3",
+    "electron-builder": "^22.9.1",
+    "electron-reloader": "^1.0.1",
+    "postcss-cli": "^8.1.0"
+  },
+  "dependencies": {
+    "alpinejs": "^2.7.2",
+    "exceljs": "^4.1.1",
+    "puppeteer": "^5.3.1",
+    "sequelize": "^6.3.5",
+    "sqlite3": "^5.0.0",
+    "tailwindcss": "^1.9.4"
+  },
+  "build": {
+    "appId": "scraper",
+    "mac": {
+      "category": "scraper"
+    },
+    "asar": true,
+    "asarUnpack": "node_modules/puppeteer/.local-chromium/**/*"
   }
 }
